# completions

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: validator.yml
completions/: format_windows10.json  naval_fate.json
