[tool.poetry]
name = "completions"
version = "0.1.0"
description = ""
authors = ["Alexander Shishenko <alex@shishenko.com>"]

[tool.poetry.dependencies]
python = "^3.8"
oactool = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
