[tool.poetry]
name = "comp"
version = "0.1.0"
description = ""
authors = ["Alexander Shishenko <alex@shishenko.com>"]

[tool.poetry.dependencies]
python = "^3.8"
oactool = "^0.1.5"

[tool.poetry.dev-dependencies]
pre-commit = "^2.14.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
